src/github.com/ebay/akutan/query/parser/testdata/insert/errors/bad_predicate_op.res
parser: unexpected type *parser.Operator as predicate of fact 1